# h4dlogger

./: .gitignore  Makefile  README.md  TODO.md  pyproject.toml
firmware/: ESP32-pinout.md  README.md
firmware/esp32_logger/: Makefile  esp32_logger.ino  index.html  web.ino  web2.ino.old  wifi_secrets_example.h
firmware/esp32_logger_v11/: esp32_logger_v11.ino
firmware/esp32c3_init_ota/: esp32c3_init_ota.ino  wifi_secrets.h
firmware/esp32c3_platformio/: esp32c3supermini_logger.ino  web.ino  wifi_secrets_example.h
firmware/esp32c3_platformio/data/: app.js  index.html  style.css
firmware/esp32c3_sht21/: Makefile  esp32c3_sht21.ino
firmware/esp32c3_supermini_debug/: Makefile  esp32c3_supermini_debug.ino
firmware/esp32c3sm/: Makefile  README.md  esp32c3sm.ino
firmware/esp32c3supermini_logger/: Makefile  build_config.h  esp32c3supermini_logger.ino  web.h  web.ino  wifi_secrets.h
firmware/zzz/: esp32_logger_v11.ino
mqtt_monitor/: check_mqtt_messages.sh  check_mqtt_messages_co2.sh
mqtt_server/: README.md  check_mqtt.sh  etc_init.d_mqttlog.sh  install_mqtt_log_service.sh  kill_mqtt.sh  log_mqtt.sh  mqtt_log_service  mqtt_web.sh  restart_mqtt_log_service.sh
mqtt_server/zzz/: config.yaml  mqtt_logger_web.py
scripts/: dlogger.sh
src/h4dlogger/: __init__.py  cli.py  loader.py  main.py  metrics.py  parser.py  plot.py
tests/: test_h4dlogger_metrics.py  test_parser.py
