[project]
name = "h4dlogger"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ffsedd", email = "ffsedd@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
]

[project.scripts]
dlogger = "h4dlogger:main"

[build-system]
requires = ["uv_build>=0.10.6,<0.11.0"]
build-backend = "uv_build"
